methods.basics.Methods.scala.error
Erreur de compilation :
Methods:10: error: not found: value gauch
gauch()
^