methods.basics.Methods.scala.code
def goAndGet() {
}

for (i <- 1 to 7) {
    if (!estSurBiscuit) {
      avance()}
}
prendBiscuit()
gauche()
gauch()
while (!estFaceMur()) {
  avance()
}
poseBiscuit()